# dapi-demo

./: .gitignore  Makefile  README.md  TUTORIAL.md  opendapi.config.yaml  package-lock.json  package.json  pyproject.toml  serverless.yml
.github/workflows/: opendapi_ci.yml  unit_test.yml
dapis/: todos.datastores.yaml  todos.teams.yaml  woven_demo.datastores.yaml  woven_demo.teams.yaml
dapis/pynamodb/: todo_update_log.dapi.yaml  todos.dapi.yaml
tests/: test_opendapi.py
todos/: todo_model.py  todo_update_log_model.py
